# pulgon_tools

./: .gitignore  .pre-commit-config.yaml  AUTHORS  Dimino_algorithm.py  POSCAR  README.md  family5_derivation.md  family5_modified_table.html  main.py  plot_phonon.py  poscar.vasp  pyproject.toml  test.vasp
.github/workflows/: test-with-uv.yaml
examples/: detect_linegroup.py  generate_13struct_from_each_family.py  generate_7molecular_from_each_AxialPointGroup.py  generate_character_table.py  generate_double_layer_MoS2-WS2_nanotube.py  generate_symmetry_adapted_basis.py  poscar_C_nanotube_5x0  poscar_monolayer_MoS2  poscar_monolayer_WS2
examples/data/: poscar_monolayer_WS2
scripts/: detect_linegroup.py
src/: detect_point_group.py
src/Generate_line_group_structure_module.egg-info/: PKG-INFO  SOURCES.txt
src/mypkg/: generate_structures.py  utils.py
src/pulgon_tools/: Irreps_tables.py  Irreps_tables_withparities.py  __init__.py  cli.py  detect_generalized_translational_group.py  detect_linegroup.py  detect_point_group.py  force_constant_correction.py  generate_MoS2type_nanotube.py  generate_irreps_tables.py  generate_structures.py  line_group_table.py  structure_chirality.py  structures_sym_based.py  symmetry_projector.py  test.py  utils.py
src/pulgon_tools/scripts/: pulgon-detect-AxialPointGroup.py  pulgon-detect-CyclicGroup.py  pulgon-detect-linegroup.py  pulgon-fcs-correction.py  pulgon-generate-structures-chirality.py  pulgon-generate-structures-sym_based.py  pulgon-generate-structures.py  pulgon-irreps-tables.py
src/pulgon_tools_wip/: Irreps_tables.py  Irreps_tables_withparities.py  __init__.py  detect_generalized_translational_group.py  detect_point_group.py  detection_experiments.py  force_constant_correction.py  generate_MoS2type_nanotube.py  generate_structures.py  line_group_table.py  test.json  test.npy  test.py  utils.py
test/: test_Dimino.py  test_chirality_func.py  test_dection_func.py  test_detection_func.py  test_force_constant_correction.py  test_generate_func.py  test_irreps_tables.py  test_sym_operations.py  test_symmetry_projector.py  test_utils.py
test/data/: 10-0-ZZ  12-12-AM  24-0-ZZ  9-9-AM  C4  C4h  C4v  C6u  m1  m2  m3  m4  m5  m6  m7  m8  non-sym  st4  st5  st7
test/data/fcs/: FORCE_CONSTANTS_correction  FORCE_CONSTANTS_correction.hdf5  POSCAR  phonopy.yaml
test/data/fcs_bak/: FORCE_CONSTANTS_correction  FORCE_CONSTANTS_correction.hdf5
test/data/structs/: family_02.vasp  family_03.vasp  family_04.vasp  family_08.vasp  family_09.vasp  family_13.vasp
test/data/symmetry_projector/: phonopy.yaml
test/data/symmetry_projector_C_nanotube-sp10/: SPOSCAR  phonopy.yaml
test/data/test_irrep_struct/: family_01.vasp  family_03.vasp  family_04.vasp  family_05.vasp  family_06.vasp  family_07.vasp  family_10.vasp  family_11.vasp  family_12.vasp
