# -*- coding: utf-8 -*-

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulgon_tools_wip"
authors = [
    {name = "Yujie Cen", email = "yujie.cen@tuwien.ac.at"}
]
description = "Generating line group structures"
requires-python = ">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "ase"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pulgon-generate-structures = "pulgon_tools_wip:generate_structures.main"
