# -*- coding: utf-8 -*-

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulgon_tools_wip"
authors = [
    {name = "Yujie Cen", email = "yujie.cen@tuwien.ac.at"}
]
description = "Work-in-progress foundation libraries of the PULGON project"
requires-python = ">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "ase",
    "pymatgen",
    "ipdb",
    "cvxpy",
    "phonopy",
    "seekpath",
]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pulgon-generate-structures = "pulgon_tools_wip:generate_structures.main"
pulgon-detect-AxialPointGroup = "pulgon_tools_wip:detect_point_group.main"
pulgon-detect-CyclicGroup = "pulgon_tools_wip:detect_generalized_translational_group.main"
pulgon-generate-CharacterTable = "pulgon_tools_wip:Irreps_tables.main"
pulgon-fcs-correction = "pulgon_tools_wip:force_constant_correction.main"

[project.optional-dependencies]
test = ["pytest", "pytest-datadir"]

[tool.setuptools.dynamic]
version = {attr = "pulgon_tools_wip.__version__"}
