# -*- coding: utf-8 -*-

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulgon_tools"
authors = [
    {name = "Yujie Cen", email = "yujie.cen@tuwien.ac.at"}
]
description = "Foundation libraries of the PULGON project"
requires-python = ">=3.9, <=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "ase",
    "pymatgen",
    "ipdb",
    "cvxpy",
    "phonopy",
    "seekpath",
    "pulp",
]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pulgon-generate-structures-sym_based = "pulgon_tools:structures_sym_based.main"
pulgon-generate-structures-chirality = "pulgon_tools:structure_chirality.main"
pulgon-detect-AxialPointGroup = "pulgon_tools:detect_point_group.main"
pulgon-detect-CyclicGroup = "pulgon_tools:detect_generalized_translational_group.main"
pulgon-fcs-correction = "pulgon_tools:force_constant_correction.main"
pulgon-irreps-tables = "pulgon_tools:generate_irreps_tables.main"

[tool.setuptools.dynamic]
version = {attr = "pulgon_tools.__version__"}


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::PendingDeprecationWarning:osqp",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]


[project.optional-dependencies]
dev = [
    "pretty-errors>=1.2.25",
    "pytest>=8.4.2",
    "pytest-datadir>=1.8.0",
]
